--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       <section class="share">
         <a class="icon" href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.id }}&text={{page.title | cgi_escape}}&via={{ site.twitter_username }}" target="_blank">
           Share on
-          {% include icon-twitter.html %}
+          {% include icon-twitter.svg %}
         </a>
       </section>
     </footer>
@@ -26,20 +26,27 @@ layout: default
           <div class="author-image"></div>
           <h4>{{ site.name }}</h4>
           <p class="bio">{{site.bio}}</p>
-
           <p>
             <span>
               {% if site.github_username %}
                 {% include icon-github.html username=site.github_username %}
               {% endif %}
             </span>
-
+            <span>
+              {% if site.linkedin_username %}
+                {% include icon-linkedin.html username=site.linkedin_username %}
+              {% endif %}
+            </span>
+          </p>
+          <!--
+          <p>
             <span>
               {% if site.twitter_username %}
                 {% include icon-twitter.html username=site.twitter_username %}
               {% endif %}
             </span>
           </p>
+          -->
           <hr>
           <p class="published">Published <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time></p>
         </section>
@@ -47,7 +54,7 @@ layout: default
       <div class="isRight">
         <h5 class="index-headline featured"><span>Supported by</span></h5>
         <footer class="site-footer">
-          <section class="poweredby">Proudly published with <a href="http://jekyllrb.com"> Jekyll</a> and <a href="https://github.com/ageitgey/amplify">Amplify</a></section>
+          <section class="poweredby">Proudly published with <a href="http://jekyllrb.com"> Jekyll</a> and <a href="https://github.com/ageitgey/amplify">Amplify</a><br>Hosted by <a href="https://pages.github.com">GitHub Pages</a></section>
           <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i> You should subscribe to my feed.</span></a>
           <div class="inner">
             <section class="copyright">All content copyright <a href="mailto:{{ site.email}}">{{site.name}}</a> &copy; {{ site.time | date: '%Y' }}<br>All rights reserved.</section>
