--- a/_includes/icon-linkedin.html
+++ b/_includes/icon-linkedin.html
@@ -1,3 +1,3 @@
 {% if include.username %}
-<span class="icon icon--twitter">{% include icon-twitter.svg %}</span><a href="https://twitter.com/{{ include.username }}"><span class="username">{{ include.username }}</span></a>
+<span class="icon icon--linkedin">{% include icon-linkedin.svg %}</span><a href="https://linkedin.com/in/{{ include.username }}"><span class="username">{{ include.username }}</span></a>
 {% endif %}
