--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,22 @@ layout: default
     <section class="post-content">
       <a name="topofpage"></a>
       {{content}}
+      <!--
+      <div id="disqus_thread"></div>
+      <script>
+          var disqus_config = function () {
+              this.page.url = `{{ site.url }}{{ page.id }}`;
+              this.page.identifier = `{{ site.url }}{{ page.id }}`;
+          };
+          (function() {
+              var d = document, s = d.createElement('script');
+              s.src = 'https://blog-munte.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the comments<a href="https://disqus.com/?ref_noscript">powered by Disqus.</a></noscript>
+      -->
     </section>
     <footer class="post-footer">
       <section class="share">
