Updated Disqus id tp be more unique

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
         layout="responsive"
         sandbox="allow-scripts allow-same-origin allow-modals allow-popups allow-forms"
         resizable
-        src="https://amp.munte.me/disqus#{{ page.id }}">
+        src="https://amp.munte.me/disqus#{{ site.url }}{{ page.id }}">
         <amp-img layout="fill" src="https://c.disquscdn.com/next/1c57e77/marketing/assets/img/brand/disqus-logo-blue-transparent.png" placeholder></amp-img>
         <div overflow tabindex="0"></div>
       </amp-iframe>
