Directly imbed utterances

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,14 @@ layout: default
     <section class="post-content">
       <a name="topofpage"></a>
       {{content}}
-      <amp-script layout="container" src="https://blog.munte.me/utterances.js"></amp-script>
+      <script src="https://utteranc.es/client.js"
+          repo="pieiscool32/pieiscool32.github.io"
+          issue-term="pathname"
+          label="Blog-Comment"
+          theme="github-light"
+          crossorigin="anonymous"
+      async>
+      </script>
       <noscript>Please enable JavaScript to view the comments <a href="https://utteranc.es">powered by Utterences.</a></noscript>
     </section>
     <footer class="post-footer">
