--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,15 +1,13 @@
-<amp-analytics type="googleanalytics" id="amp-analytics">
 <script type="application/json">
-{
-  "vars": {
-    "account": "{{ site.analytics_id }}"
-  },
-  "triggers": {
-    "trackPageview": {
-      "on": "visible",
-      "request": "pageview"
-    }
-  }
-}
+(function(f, a, t, h, o, m){
+    a[h]=a[h]||function(){
+        (a[h].q=a[h].q||[]).push(arguments)
+    };
+    o=f.createElement('script'),
+    m=f.getElementsByTagName('script')[0];
+    o.async=1; o.src=t; o.id='fathom-script';
+    m.parentNode.insertBefore(o,m)
+})(document, window, '//fathom.munte.me/tracker.js', 'fathom');
+fathom('set', 'siteId', 'UFKDS');
+fathom('trackPageview');
 </script>
-</amp-analytics>
