Fixed script tag

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-<script type="application/json">
+<script>
 (function(f, a, t, h, o, m){
     a[h]=a[h]||function(){
         (a[h].q=a[h].q||[]).push(arguments)
