Don't send all cookies

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,7 +6,7 @@
   <button on="tap:user-consent.dismiss">I accept</button>
 </amp-user-notification>
 
-<amp-analytics data-credentials="include" config="https://fathom.munte.me/analytics.json" data-consent-notification-id="user-consent">
+<amp-analytics config="https://fathom.munte.me/analytics.json?previousId=CLIENT_ID(fathom-id,,_fathom)" data-consent-notification-id="user-consent">
   <script type="application/json">
     {
       "vars": {
