Updated request parameters

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -14,7 +14,7 @@
         "pageViewId": "PAGE_VIEW_ID_64"
       },
       "requests": {
-        "pageview": "https://fathom.munte.me/collect?p=${canonicalPath}&h=${canonicalHostname}&r=''&u=${isUnique}&nv=${isNewVisitor}&ns=${isNewSession}&id=${pageViewId}&sid=${siteId}&pid=${previousId}"
+        "pageview": "https://fathom.munte.me/collect?p=${canonicalPath}&h=https%3A%2F%2F${canonicalHostname}&r=&u=${isUnique}&nv=${isNewVisitor}&ns=${isNewSession}&id=${pageViewId}&sid=${siteId}&pid=${previousId}"
       },
       "triggers": {
         "trackPageview": {
