Test adding Panelbear

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -33,3 +33,10 @@
     }
   </script>
 </amp-analytics>
+
+<!-- Panelbear Analytics - We respect your privacy -->
+<script async src="https://cdn.panelbear.com/analytics.js?site=HurbVFxcx18"></script>
+<script>
+    window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
+    panelbear('config', { site: 'HurbVFxcx18' });
+</script>
